@@ -3,7 +3,6 @@ package com.github.scribejava.apis;
 import com.github.scribejava.apis.service.OdnoklassnikiServiceImpl;
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.model.OAuthConfig;
-import com.github.scribejava.core.model.Verb;
 import com.github.scribejava.core.oauth.OAuth20Service;
 import com.github.scribejava.core.utils.OAuthEncoder;
 import com.github.scribejava.core.utils.Preconditions;
@@ -28,11 +27,6 @@ public class OdnoklassnikiApi extends DefaultApi20 {
     @Override
     public String getAccessTokenEndpoint() {
         return "http://api.odnoklassniki.ru/oauth/token.do";
-    }
-
-    @Override
-    public Verb getAccessTokenVerb() {
-        return Verb.POST;
     }
 
     @Override
