@@ -2,7 +2,6 @@ package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.model.OAuthConfig;
-import com.github.scribejava.core.model.Verb;
 import com.github.scribejava.core.utils.OAuthEncoder;
 import com.github.scribejava.core.utils.Preconditions;
 import com.github.scribejava.apis.service.TutByOAuthServiceImpl;
@@ -27,11 +26,6 @@ public class TutByApi extends DefaultApi20 {
     @Override
     public String getAccessTokenEndpoint() {
         return "http://profile.tut.by/getToken";
-    }
-
-    @Override
-    public Verb getAccessTokenVerb() {
-        return Verb.POST;
     }
 
     @Override
